User endpoint testing + jest integration
